[gd_scene load_steps=38 format=2]

[ext_resource path="res://HUD.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/moons/pixil-frame-0 (7).png" type="Texture" id=2]
[ext_resource path="res://assets/font.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/planets/MediumPlanet.png" type="Texture" id=4]
[ext_resource path="res://assets/spaceship/Spaceship_launch.png" type="Texture" id=5]
[ext_resource path="res://assets/planets/Planet1.png" type="Texture" id=6]
[ext_resource path="res://assets/spaceship/SpaceshipSmall.png" type="Texture" id=7]
[ext_resource path="res://Spaceship5.tres.gd" type="Script" id=8]
[ext_resource path="res://assets/spaceship/Spaceship-1.png.png" type="Texture" id=11]
[ext_resource path="res://assets/blank.png" type="Texture" id=12]
[ext_resource path="res://assets/spaceship/SpaceshipMed.png" type="Texture" id=13]

[sub_resource type="GDScript" id=1]
script/source = "extends Node2D


# Declare member variables here. Examples:
var attempts = 0;


# Called when the node enters the scene tree for the first time.
func _ready():
	$HUD/Attempts.text = str(\"Attempts : \", attempts);


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass

func reset():
	get_node(\"Spaceship\").pos = Vector2(500,540);
	get_node(\"Spaceship\").launch = false;
	get_node(\"Spaceship\").force = Vector2(0,0);
	get_node(\"Spaceship\").velocity  = Vector2();
	get_node(\"HUD/ResetButton\").release_focus();
	get_node(\"Spaceship\").prevPos = Vector2();
	get_node(\"Spaceship\").set_linear_velocity(Vector2(0,0));
	get_node(\"Spaceship/Spaceship_sprite\").play(\"static\");
	get_node(\"Moon/Sprite\").play(\"static\");
	$HUD/TryAgain/AnimatedSprite.play(\"static\");
	attempts = attempts + 1;
	$HUD/Attempts.text = str(\"Attempts : \", attempts);


func _on_ResetButton_pressed():
	reset();



func _on_TryAgainButton_pressed():
	get_node(\"HUD/TryAgain/AnimatedSprite\").play(\"press\");
	yield($HUD/TryAgain/AnimatedSprite, \"animation_finished\");
	$HUD/TryAgain.visible = false
	reset();



func _on_resume_pressed():
	$HUD/Menu.hide();
	$HUD/menuButton.release_focus();
"

[sub_resource type="CapsuleShape2D" id=2]
radius = 16.6467
height = 29.3648

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 140, 140 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 140, 0, 140, 140 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 280, 0, 140, 140 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 140, 140, 140 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 140, 140, 140, 140 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 280, 140, 140, 140 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 280, 140, 140 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 140, 280, 140, 140 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 280, 280, 140, 140 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ ExtResource( 11 ) ],
"loop": false,
"name": "static",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": false,
"name": "launch",
"speed": 8.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 13 ), ExtResource( 7 ), ExtResource( 12 ) ],
"loop": false,
"name": "land",
"speed": 8.0
} ]

[sub_resource type="SegmentShape2D" id=13]
a = Vector2( 1022.15, 3.48065 )
b = Vector2( -0.316605, -0.330017 )

[sub_resource type="SegmentShape2D" id=14]
a = Vector2( -1.51471, 1.74912 )
b = Vector2( 1.62007, 592.496 )

[sub_resource type="SegmentShape2D" id=15]
b = Vector2( 2.84918, 596.142 )

[sub_resource type="CircleShape2D" id=16]
radius = 125.245

[sub_resource type="CircleShape2D" id=17]
radius = 32.9012

[sub_resource type="CircleShape2D" id=18]
radius = 148.706

[sub_resource type="CircleShape2D" id=19]
radius = 43.9075

[sub_resource type="CircleShape2D" id=20]
radius = 119.54

[sub_resource type="CircleShape2D" id=21]
radius = 33.3039

[sub_resource type="CircleShape2D" id=22]
radius = 93.4626

[sub_resource type="SpriteFrames" id=23]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "static",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=24]
radius = 21.7034

[sub_resource type="GDScript" id=25]
script/source = "extends Node2D


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass

"

[sub_resource type="DynamicFont" id=26]
size = 25
font_data = ExtResource( 3 )

[node name="Level5" type="Node2D"]
position = Vector2( 0.891068, 0.891075 )
script = SubResource( 1 )

[node name="Spaceship" type="RigidBody2D" parent="."]
position = Vector2( 614.787, 525.045 )
contacts_reported = 10
contact_monitor = true
can_sleep = false
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spaceship"]
rotation = -0.785397
shape = SubResource( 2 )

[node name="Spaceship_sprite" type="AnimatedSprite" parent="Spaceship"]
rotation = -0.820305
scale = Vector2( 0.370018, 0.491259 )
frames = SubResource( 12 )
animation = "static"

[node name="Walls" type="Node2D" parent="."]
position = Vector2( 121, 0 )

[node name="TopBoundary" type="StaticBody2D" parent="Walls"]
position = Vector2( -118.563, 1.91368 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/TopBoundary"]
shape = SubResource( 13 )

[node name="BottomBoundary" type="StaticBody2D" parent="Walls"]
position = Vector2( -121.891, 594.154 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/BottomBoundary"]
position = Vector2( 0, -6.10352e-05 )
shape = SubResource( 13 )

[node name="LeftBoundary" type="StaticBody2D" parent="Walls"]
position = Vector2( -118.563, -0.891075 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/LeftBoundary"]
position = Vector2( 0, 0.891075 )
shape = SubResource( 14 )

[node name="RightBoundary" type="StaticBody2D" parent="Walls"]
position = Vector2( 904.11, 2.80476 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/RightBoundary"]
position = Vector2( 3.12866e-10, -2.80476 )
shape = SubResource( 15 )

[node name="Planet" type="Area2D" parent="."]
position = Vector2( 753.777, 402.94 )
rotation = 0.436332
space_override = 1
gravity_point = true
gravity_distance_scale = 0.01
gravity_vec = Vector2( 0, 0 )
gravity = 40.0
linear_damp = 0.0
angular_damp = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Planet"]
shape = SubResource( 16 )

[node name="Sprite" type="Sprite" parent="Planet"]
position = Vector2( 1.13794, 0.357662 )
scale = Vector2( 0.663505, 0.673781 )
texture = ExtResource( 6 )

[node name="Crash" type="StaticBody2D" parent="Planet"]

[node name="CrashArea" type="CollisionShape2D" parent="Planet/Crash"]
shape = SubResource( 17 )

[node name="Planet3" type="Area2D" parent="."]
position = Vector2( 634.765, 263.248 )
rotation = 0.436332
space_override = 1
gravity_point = true
gravity_distance_scale = 0.01
gravity_vec = Vector2( 0, 0 )
gravity = 40.0
linear_damp = 0.0
angular_damp = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Planet3"]
shape = SubResource( 16 )

[node name="Sprite" type="Sprite" parent="Planet3"]
position = Vector2( 1.13794, 0.357662 )
scale = Vector2( 0.663505, 0.673781 )
texture = ExtResource( 6 )

[node name="Crash" type="StaticBody2D" parent="Planet3"]

[node name="CrashArea" type="CollisionShape2D" parent="Planet3/Crash"]
shape = SubResource( 17 )

[node name="Planet4" type="Area2D" parent="."]
position = Vector2( 507.092, 139.75 )
rotation = 0.436332
space_override = 1
gravity_point = true
gravity_distance_scale = 0.01
gravity_vec = Vector2( 0, 0 )
gravity = 40.0
linear_damp = 0.0
angular_damp = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Planet4"]
shape = SubResource( 16 )

[node name="Sprite" type="Sprite" parent="Planet4"]
position = Vector2( 1.13794, 0.357662 )
scale = Vector2( 0.663505, 0.673781 )
texture = ExtResource( 6 )

[node name="Crash" type="StaticBody2D" parent="Planet4"]

[node name="CrashArea" type="CollisionShape2D" parent="Planet4/Crash"]
shape = SubResource( 17 )

[node name="MediumPlanet" type="Area2D" parent="."]
position = Vector2( 488.837, 435.572 )
space_override = 1
gravity_point = true
gravity_distance_scale = 0.007
gravity_vec = Vector2( 0, 0 )
gravity = 75.0
linear_damp = 0.0
angular_damp = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="MediumPlanet"]
shape = SubResource( 18 )

[node name="Sprite" type="Sprite" parent="MediumPlanet"]
position = Vector2( 1.13794, 0.357662 )
scale = Vector2( 0.663505, 0.673781 )
texture = ExtResource( 4 )

[node name="Crash" type="StaticBody2D" parent="MediumPlanet"]

[node name="CrashArea" type="CollisionShape2D" parent="MediumPlanet/Crash"]
position = Vector2( 0.713379, -0.332703 )
shape = SubResource( 19 )

[node name="Planet2" type="Area2D" parent="."]
position = Vector2( 371.644, 237.027 )
rotation = -0.436332
space_override = 1
gravity_point = true
gravity_distance_scale = 0.01
gravity_vec = Vector2( 0, 0 )
gravity = 40.0
linear_damp = 0.0
angular_damp = 0.0
priority = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Planet2"]
shape = SubResource( 20 )

[node name="Sprite" type="Sprite" parent="Planet2"]
position = Vector2( -0.0823364, 0.537796 )
scale = Vector2( 0.664, 0.674 )
texture = ExtResource( 6 )

[node name="Crash" type="StaticBody2D" parent="Planet2"]

[node name="CrashArea" type="CollisionShape2D" parent="Planet2/Crash"]
shape = SubResource( 21 )

[node name="Planet5" type="Area2D" parent="."]
position = Vector2( 244.557, 362.483 )
rotation = -0.436332
space_override = 1
gravity_point = true
gravity_distance_scale = 0.01
gravity_vec = Vector2( 0, 0 )
gravity = 40.0
linear_damp = 0.0
angular_damp = 0.0
priority = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Planet5"]
shape = SubResource( 20 )

[node name="Sprite" type="Sprite" parent="Planet5"]
position = Vector2( -0.0823364, 0.537796 )
scale = Vector2( 0.664, 0.674 )
texture = ExtResource( 6 )

[node name="Crash" type="StaticBody2D" parent="Planet5"]

[node name="CrashArea" type="CollisionShape2D" parent="Planet5/Crash"]
shape = SubResource( 21 )

[node name="Moon" type="Area2D" parent="."]
position = Vector2( 374.998, 109.928 )
space_override = 1
gravity_point = true
gravity_distance_scale = 0.01
gravity_vec = Vector2( 0, 0 )
gravity = 25.0
linear_damp = 0.0
angular_damp = 0.0
priority = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Moon"]
shape = SubResource( 22 )

[node name="Sprite" type="AnimatedSprite" parent="Moon"]
scale = Vector2( 0.35, 0.35 )
frames = SubResource( 23 )
animation = "static"

[node name="Goal" type="StaticBody2D" parent="Moon"]

[node name="GoalCollision" type="CollisionShape2D" parent="Moon/Goal"]
position = Vector2( 6.10352e-05, 0 )
shape = SubResource( 24 )

[node name="HUD" parent="." instance=ExtResource( 1 )]
script = SubResource( 25 )

[node name="Sprite2" type="Sprite" parent="HUD/PopupDialog" index="3"]
position = Vector2( 225.754, 248.806 )
texture = ExtResource( 2 )

[node name="Sprite2" parent="HUD/Menu/ScrollContainer/HBoxContainer/Level1" index="1"]
visible = false

[node name="Sprite2" parent="HUD/Menu/ScrollContainer/HBoxContainer/Level2" index="1"]
visible = false

[node name="Sprite2" parent="HUD/Menu/ScrollContainer/HBoxContainer/Level3" index="1"]
visible = false

[node name="Sprite2" parent="HUD/Menu/ScrollContainer/HBoxContainer/Level4" index="1"]
visible = false

[node name="levelTitle" type="Label" parent="."]
margin_left = 18.1094
margin_top = 14.4875
margin_right = 193.109
margin_bottom = 39.4875
custom_fonts/font = SubResource( 26 )
custom_colors/font_color = Color( 0.713726, 0.25098, 1, 1 )
custom_colors/font_color_shadow = Color( 0.290196, 0.94902, 1, 1 )
text = "LEVEL 5"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Spaceship" to="Spaceship" method="_on_Spaceship_body_entered"]
[connection signal="input_event" from="Spaceship" to="." method="_on_Spaceship_input_event"]
[connection signal="pressed" from="HUD/ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="pressed" from="HUD/TryAgain/TryAgainButton" to="." method="_on_TryAgainButton_pressed"]
[connection signal="pressed" from="HUD/Menu/resume" to="." method="_on_resume_pressed"]

[editable path="HUD"]
